// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage not renders a fallback image if showDefault prop is false 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop 1`] = `
<img
  alt="Alt prop"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop empty 1`] = `
<img
  alt=""
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
<img
  alt="Item title"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  height="300"
  src="default-image.svg"
  width="400"
/>
`;
